force-app/main/default/objects/College__c/fields/Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Phone_No__c</fullName>
    <label>Phone No</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>